tests/baselines/reference/forAwait.8.es6.errors.txt
tests/cases/conformance/forAwait/es6/forAwait.8.es6.ts(3,9): error TS1104: A 'for-await-of' statement is only allowed within an async function or async generator.


==== tests/cases/conformance/forAwait/es6/forAwait.8.es6.ts (1 errors) ====
    declare const i: Iterable<number>;
    function* f() {
        for await (const x of i) {
            ~~~~~
!!! error TS1104: A 'for-await-of' statement is only allowed within an async function or async generator.
        }
    }